# Hang-man-pro-vip

./: CMakeLists.txt  HangManProVip - Shortcut.lnk  main.cpp
Data/: All word list meaning.txt  All word list.txt  AnimalMeaning.txt  Animals.txt  SubjectMeaning.txt  Subjects.txt  hardWordList.txt
Header/: Ai_Function.h  Draw.h  HintFunctions.h  Main Rule.h  Player.h
Sources/: Ai_Function.cpp  Draw.cpp  HintFunctions.cpp  Main Rule.cpp  Player.cpp
